Add env to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
+# Spring application name
 spring.application.name=OneVizion
+
+# OpenApi
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# DataSource configuration
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASS}
+
+# JPA/Hibernate properties
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=true
+
+# Enable Hibernate second level cache
+spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
+spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+spring.jpa.properties.hibernate.cache.use_query_cache=true
+spring.jpa.properties.hibernate.cache.region.factory_class=org.infinispan.hibernate.cache.v60.InfinispanRegionFactory
+spring.jpa.properties.hibernate.cache.infinispan.cfg=infinispan/infinispan.xml
+
+# Liquibase configuration pointing to XML changelog
+spring.liquibase.change-log=classpath:/db/changelog.xml
+spring.liquibase.enabled=true
+spring.liquibase.user=${DATASOURCE_USER}
+spring.liquibase.password=${DATASOURCE_PASS}
